[fix] make cta clickable on mobile
Bug description: since this row re-sorts columns on mobile (they push and pull each other) the result was a non-clickable cta button under the “Coming January 29th” line.

--- a/app/assets/stylesheets/redesign/pages/_landing_page_bridesmaid_teaser.scss
+++ b/app/assets/stylesheets/redesign/pages/_landing_page_bridesmaid_teaser.scss
@@ -92,6 +92,10 @@
     @include column-vertical-align();
   }
 
+  .Column__contentCopy {
+    z-index: 1;
+  }
+
   // Helpers - if these are used in other pages we can move them to a separate stylesheet
   .u-overlay-area {
     position: relative;
